# end-gamer

./: .gitignore  README.md  VISUALIZATION.md  analyze.py  demo_chess_env.py  docker-compose.yml  evaluate.py  play.py  pyproject.toml  requirements.txt  start_visualization.sh  train.py
.kiro/hooks/: task-completion-tracker.kiro.hook
.kiro/specs/chess-engine-kp-endgame/: design.md  requirements.md  tasks.md
api/: Dockerfile  README.md  server.py
checkpoints/: .gitkeep
configs/: default.yaml  full_training.yaml  quick_test.yaml
docs/: developer_guide.md  project_summary.md  tablebase_implementation_summary.md  tablebase_usage.md  training_guide.md  visualization_quick_start.md  visualization_setup.md
frontend/: .gitignore  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ControlPanel.css  ControlPanel.jsx  GameHistory.css  GameHistory.jsx  LiveTraining.css  LiveTraining.jsx  MetricsDashboard.css  MetricsDashboard.jsx
src/: __init__.py  exceptions.py
src/chess_env/: __init__.py  move_encoder.py  position.py  position_generator.py
src/config/: __init__.py  config.py
src/evaluation/: __init__.py  benchmark_opponents.py  evaluator.py  tablebase.py  test_suite.py
src/logging/: __init__.py  metrics_logger.py  resource_monitor.py
src/mcts/: __init__.py  mcts.py  mcts_node.py
src/neural_net/: __init__.py  chess_net.py  policy_head.py  residual_block.py  value_head.py
src/training/: __init__.py  checkpoint_utils.py  parallel_self_play.py  replay_buffer.py  self_play_worker.py  trainer.py  training_example.py  training_orchestrator.py
tests/: __init__.py  test_exceptions.py
tests/test_chess_env/: __init__.py  test_integration.py  test_move_encoder.py  test_position.py  test_position_generator.py
tests/test_config/: test_config.py  test_example_configs.py
tests/test_evaluation/: __init__.py  test_benchmark_opponents.py  test_evaluator.py  test_tablebase.py  test_test_suite.py
tests/test_logging/: __init__.py  test_metrics_logger.py  test_resource_monitor.py
tests/test_mcts/: __init__.py  test_integration.py  test_mcts.py  test_mcts_node.py
tests/test_neural_net/: __init__.py  test_chess_net.py  test_policy_head.py  test_residual_block.py  test_value_head.py
tests/test_training/: __init__.py  test_checkpoint_utils.py  test_graceful_degradation.py  test_parallel_self_play.py  test_replay_buffer.py  test_self_play_worker.py  test_trainer.py  test_training_example.py  test_training_orchestrator.py
